[project]
name = "music-reader"
version = "0.1.0"
description = "Sheet music transcription using the Sheet Music Transformer (SMT)"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "loguru>=0.7.3",
    "mido>=1.3.3",
    "numpy>=1.24.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.0.0",
    "scikit-image>=0.25.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers==4.49.0",
    "verovio>=6.2.1",
]

[project.scripts]
music-reader = "main:main"
